<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note Taker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Title:</string>
    <string name="date">Date:</string>
    <string name="note">Note:</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="title_activity_list_notes">Note Taker</string>
    <string name="add_note">Add Note</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation_text">Are you sure you want to delete this note? It can\'t be undone!</string>
    <string name="delete_confirm">Confirm Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="time">Time:</string>
    <string name="share_note">Share Note</string>
    <string name="share_this_note_via">Share this note via</string>
    <string name="enter_a_title_please_">Enter a title please.</string>
    <string name="empty_title">Empty Title</string>

</resources>
