<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/saveNoteItem"
        android:icon="@+drawable/ic_action_note_save"
        android:showAsAction="ifRoom"
        android:title="@string/save">
    </item>
    <item
        android:id="@+id/deleteNoteItem"
        android:icon="@+drawable/ic_action_note_discard"
        android:showAsAction="ifRoom"
        android:title="@string/delete">
    </item>
    <item
        android:id="@+id/editNoteItem"
        android:icon="@+drawable/ic_action_note_edit"
        android:showAsAction="ifRoom"
        android:title="@string/edit">
    </item>
    <item
        android:id="@+id/shareNoteItem"
        android:icon="@+drawable/ic_action_note_share"
        android:showAsAction="ifRoom"
        android:title="@string/share_note">
    </item>

</menu>